# arm-cmake-toolchain

./: .gitignore  .jlink  CMakeLists.txt  README  README.md  configure.bat  main.c
inc/: test_eigen.h  test_vect.h
platform/stm32f767zi/: gcc.ld  retarget.c  startup.c
src/: binary_library.cpp  test_eigen.c  test_vect.cpp
test/: CMakeLists.txt
utils/: arm-gcc-toolchain.cmake
